test/errors/structure_types_error/zs/packable_string_field_error.zs
package packable_string_field_error;

struct PackableStringFieldError
{
    packable uint8 u8Field;
    packable string stringField;
};
